# PythonProjectTemplate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg
hooks/: post_gen_project.py
tests/: __init__.py  test_bootstrap.py  test_deploy.py  test_files.py
{{cookiecutter.project_name}}/: README.md  poetry.toml  pylintrc  pyproject.toml  setup.cfg  {{'.'}}gitignore
{{cookiecutter.project_name}}/tests/: __init__.py  test_linters.py
{{cookiecutter.project_name}}/{{cookiecutter.root_python_package}}/: __init__.py  __main__.py
