# Python project configuration.

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "PythonProjectTemplate"
version = "0.1.0"
description = "Python project template by Prokher."
authors = ["Alexander A. Prokhorov <prokher@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# Version syntax: https://python-poetry.org/docs/versions/
python = "^3.6.1"

[tool.poetry.dev-dependencies]
# Development dependencies. Python packages needed for development.
# Installed when you run `poetry install`.
# Version syntax: https://python-poetry.org/docs/versions/
black = { version = ">=19.10b0", allow-prereleases = true }
cookiecutter = ">=1.7.0"
coverage = ">=5.0.4"
ipython = "*"
isort = {version = "*", extras = ["pyproject"]}
mypy = ">=0.770"
pre-commit = ">=2.2.0"
pydocstyle = ">=5.0.2"
pylint = ">=2.4.4"
pylint-quotes = ">=0.2.1"
pytest = ">=5.4.1"
pytest-asyncio = ">=0.10.0"
pytest-cookies = ">=0.5.1"
pytest-cov = ">=2.8.1"
pytest-pythonpath = ">=0.7.3"
tox = ">=3.14.6"
